# biblizap-rs

./: Cargo.toml  README.md  article.txt  complete.json  sample.txt  snowball.json
.zed/: settings.json
examples/: cache_usage.rs
migrations/: 001_postgres_initial.sql  001_sqlite_initial.sql
src/: common.rs  lib.rs
src/lens/: article.rs  cache.rs  cache2.rs  citations.rs  completion.rs  counter.rs  error.rs  lensid.rs  mod.rs  request.rs
src/lens/cache/: mod.rs  postgres.rs  sqlite.rs
src/lens/cache2/: mod.rs  postgres.rs  sqlite.rs
src/pubmed/: mod.rs
