[package]
name = "biblizap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
lazy_static = "1.4.0"
regex = "1.9.4"
reqwest = { version = "0.11.20", features = ["blocking"] }
tokio = { version = "1.32.0", features = ["rt", "full"] }
